fix(time-slider): time slider hidden behind globe

--- a/src/scripts/components/layers/time-slider/time-slider.module.css
+++ b/src/scripts/components/layers/time-slider/time-slider.module.css
@@ -14,6 +14,7 @@
   );
   font-size: 1em;
   user-select: none;
+  z-index: 1;
 }
 .container {
   position: relative;
